add amount in models

--- a/templates/orders/completed.html
+++ b/templates/orders/completed.html
@@ -20,6 +20,7 @@
         <th>Модель</th>
         <th>Цвет</th>
         <th>Размер</th>
+        <th>Кол-во</th>
         <th>Артикул</th>
         <th>Цена</th>
         <th>Дата Завершения</th>
@@ -36,6 +37,7 @@
         <td>{{ order.model }}</td>
         <td>{{ order.color }}</td>
         <td>{{ order.size }}</td>
+        <td>{{ order.amount }}</td>
         <td>{{ order.articul }}</td>
         <td>{{ order.price }}</td>
         <td>{{ order.date_modified|date:"d.m.Y - G:i"}}</td>
